This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fatal error when importing ``test.test_os`` in debug mode on Windows
Type: Stage: resolved
Components: Versions: Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: abarry, python-dev, vstinner
Priority: normal Keywords: patch

Created on 2016-01-27 15:46 by abarry, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
wstr_len.patch vstinner, 2016-01-27 15:50 review
Messages (4)
msg259024 - (view) Author: Anilyka Barry (abarry) * (Python triager) Date: 2016-01-27 15:46
I compiled CPython from latest trunk on GitHub (revision a587bc1eea903dfac94a85324cc6ab39755769a8), compiled with Py_DEBUG and went to run the test suite. Here's the (rather long) output:

E:\GitHub\cpython\PCbuild\win32>python_d -m test
== CPython 3.6.0a0 (default, Jan 26 2016, 23:23:12) [MSC v.1900 32 bit (Intel)]
==   Windows-7-6.1.7601-SP1 little-endian
==   hash algorithm: siphash24 32bit
==   E:\GitHub\cpython\build\test_python_464
Testing with flags: sys.flags(debug=0, inspect=0, interactive=0, optimize=0,
dont_write_bytecode=0, no_user_site=0, no_site=0, ignore_environment=0, verbose=0,
bytes_warning=0, quiet=0, hash_randomization=1, isolated=0)
[  1/400] test_grammar
[  2/400] test_opcodes
[  3/400] test_dict
[  4/400] test_builtin
[  5/400] test_exceptions
[  6/400] test_types
[  7/400] test_unittest
[  8/400] test_doctest
[  9/400] test_doctest2
[ 10/400] test_support
[ 11/400] test___all__
Assertion failed: compact->wstr_length == 0, file ..\Objects\unicodeobject.c, line 427
Fatal Python error: Aborted

Current thread 0x00000a88 (most recent call first):
  File "E:\GitHub\cpython\lib\ctypes\util.py", line 64 in find_library
  File "E:\GitHub\cpython\lib\uuid.py", line 473 in <module>
  File "<frozen importlib._bootstrap>", line 222 in _call_with_frames_removed
  File "<frozen importlib._bootstrap_external>", line 656 in exec_module
  File "<frozen importlib._bootstrap>", line 673 in _load_unlocked
  File "<frozen importlib._bootstrap>", line 958 in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 969 in _find_and_load
  File "E:\GitHub\cpython\lib\test\test_os.py", line 29 in <module>
  File "<frozen importlib._bootstrap>", line 222 in _call_with_frames_removed
  File "<frozen importlib._bootstrap_external>", line 656 in exec_module
  File "<frozen importlib._bootstrap>", line 673 in _load_unlocked
  File "<frozen importlib._bootstrap>", line 958 in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 969 in _find_and_load
  File "<string>", line 1 in <module>
  File "E:\GitHub\cpython\lib\test\test___all__.py", line 23 in check_all
  File "E:\GitHub\cpython\lib\test\test___all__.py", line 105 in test_all
  File "E:\GitHub\cpython\lib\unittest\case.py", line 600 in run
  File "E:\GitHub\cpython\lib\unittest\case.py", line 648 in __call__
  File "E:\GitHub\cpython\lib\unittest\suite.py", line 122 in run
  File "E:\GitHub\cpython\lib\unittest\suite.py", line 84 in __call__
  File "E:\GitHub\cpython\lib\unittest\suite.py", line 122 in run
  File "E:\GitHub\cpython\lib\unittest\suite.py", line 84 in __call__
  File "E:\GitHub\cpython\lib\unittest\suite.py", line 122 in run
  File "E:\GitHub\cpython\lib\unittest\suite.py", line 84 in __call__
  File "E:\GitHub\cpython\lib\test\support\__init__.py", line 1679 in run
  File "E:\GitHub\cpython\lib\test\support\__init__.py", line 1780 in _run_suite
  File "E:\GitHub\cpython\lib\test\support\__init__.py", line 1814 in run_unittest
  File "E:\GitHub\cpython\lib\test\libregrtest\runtest.py", line 161 in test_runner
  File "E:\GitHub\cpython\lib\test\libregrtest\runtest.py", line 162 in runtest_inner
  File "E:\GitHub\cpython\lib\test\libregrtest\runtest.py", line 126 in runtest
  File "E:\GitHub\cpython\lib\test\libregrtest\main.py", line 295 in run_tests_sequential
  File "E:\GitHub\cpython\lib\test\libregrtest\main.py", line 356 in run_tests
  File "E:\GitHub\cpython\lib\test\libregrtest\main.py", line 392 in main
  File "E:\GitHub\cpython\lib\test\libregrtest\main.py", line 433 in main
  File "E:\GitHub\cpython\lib\test\libregrtest\main.py", line 455 in main_in_temp_cwd
  File "E:\GitHub\cpython\lib\test\__main__.py", line 3 in <module>
  File "E:\GitHub\cpython\lib\runpy.py", line 85 in _run_code
  File "E:\GitHub\cpython\lib\runpy.py", line 184 in _run_module_as_main

E:\GitHub\cpython\PCbuild\win32>python_d
Python 3.6.0a0 (default, Jan 26 2016, 23:23:12) [MSC v.1900 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import test.test___all__
>>> import unittest
>>> unittest.main(test.test___all__)

<...>

test.test_openpty
test.test_operator
test.test_optparse
test.test_ordered_dict
test.test_os
Assertion failed: compact->wstr_length == 0, file ..\Objects\unicodeobject.c, line 427

E:\GitHub\cpython\PCbuild\win32>python_d
Python 3.6.0a0 (default, Jan 26 2016, 23:23:12) [MSC v.1900 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import test.test_os
Assertion failed: compact->wstr_length == 0, file ..\Objects\unicodeobject.c, line 427

Call stack (from importing 'test.test_os'):

 	ucrtbased.dll!0f7d81f0()	Unknown
 	[Frames below may be incorrect and/or missing, no symbols loaded for ucrtbased.dll]	
 	[External Code]	
>	python36_d.dll!_PyUnicode_CheckConsistency(_object * op, int check_content) Line 427	C
 	python36_d.dll!resize_compact(_object * unicode, int length) Line 920	C
 	python36_d.dll!unicode_resize(_object * * p_unicode, int length) Line 1844	C
 	python36_d.dll!PyUnicode_Append(_object * * p_left, _object * right) Line 11301	C
 	python36_d.dll!unicode_concatenate(_object * v, _object * w, _frame * f, unsigned char * next_instr) Line 5318	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 1565	C
 	python36_d.dll!fast_function(_object * func, _object * * * pp_stack, int n, int na, int nk) Line 4815	C
 	python36_d.dll!call_function(_object * * * pp_stack, int oparg) Line 4741	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3194	C
 	python36_d.dll!_PyEval_EvalCodeWithName(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure, _object * name, _object * qualname) Line 4029	C
 	python36_d.dll!PyEval_EvalCodeEx(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure) Line 4050	C
 	python36_d.dll!PyEval_EvalCode(_object * co, _object * globals, _object * locals) Line 777	C
 	python36_d.dll!builtin_exec_impl(PyModuleDef * module, _object * source, _object * globals, _object * locals) Line 957	C
 	python36_d.dll!builtin_exec(PyModuleDef * module, _object * args) Line 275	C
 	python36_d.dll!PyCFunction_Call(_object * func, _object * args, _object * kwds) Line 109	C
 	python36_d.dll!ext_do_call(_object * func, _object * * * pp_stack, int flags, int na, int nk) Line 5041	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3233	C
 	python36_d.dll!_PyEval_EvalCodeWithName(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure, _object * name, _object * qualname) Line 4029	C
 	python36_d.dll!fast_function(_object * func, _object * * * pp_stack, int n, int na, int nk) Line 4824	C
 	python36_d.dll!call_function(_object * * * pp_stack, int oparg) Line 4741	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3194	C
 	python36_d.dll!fast_function(_object * func, _object * * * pp_stack, int n, int na, int nk) Line 4815	C
 	python36_d.dll!call_function(_object * * * pp_stack, int oparg) Line 4741	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3194	C
 	python36_d.dll!fast_function(_object * func, _object * * * pp_stack, int n, int na, int nk) Line 4815	C
 	python36_d.dll!call_function(_object * * * pp_stack, int oparg) Line 4741	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3194	C
 	python36_d.dll!fast_function(_object * func, _object * * * pp_stack, int n, int na, int nk) Line 4815	C
 	python36_d.dll!call_function(_object * * * pp_stack, int oparg) Line 4741	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3194	C
 	python36_d.dll!_PyEval_EvalCodeWithName(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure, _object * name, _object * qualname) Line 4029	C
 	python36_d.dll!PyEval_EvalCodeEx(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure) Line 4050	C
 	python36_d.dll!function_call(_object * func, _object * arg, _object * kw) Line 604	C
 	python36_d.dll!PyObject_Call(_object * func, _object * arg, _object * kw) Line 2170	C
 	python36_d.dll!_PyObject_CallMethodIdObjArgs(_object * callable, _Py_Identifier * name, ...) Line 2428	C
 	python36_d.dll!PyImport_ImportModuleLevelObject(_object * name, _object * given_globals, _object * locals, _object * given_fromlist, int level) Line 1633	C
 	python36_d.dll!builtin___import__(_object * self, _object * args, _object * kwds) Line 213	C
 	python36_d.dll!PyCFunction_Call(_object * func, _object * args, _object * kwds) Line 98	C
 	python36_d.dll!PyObject_Call(_object * func, _object * arg, _object * kw) Line 2170	C
 	python36_d.dll!PyEval_CallObjectWithKeywords(_object * func, _object * arg, _object * kw) Line 4592	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 2759	C
 	python36_d.dll!_PyEval_EvalCodeWithName(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure, _object * name, _object * qualname) Line 4029	C
 	python36_d.dll!PyEval_EvalCodeEx(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure) Line 4050	C
 	python36_d.dll!PyEval_EvalCode(_object * co, _object * globals, _object * locals) Line 777	C
 	python36_d.dll!builtin_exec_impl(PyModuleDef * module, _object * source, _object * globals, _object * locals) Line 957	C
 	python36_d.dll!builtin_exec(PyModuleDef * module, _object * args) Line 275	C
 	python36_d.dll!PyCFunction_Call(_object * func, _object * args, _object * kwds) Line 109	C
 	python36_d.dll!ext_do_call(_object * func, _object * * * pp_stack, int flags, int na, int nk) Line 5041	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3233	C
 	python36_d.dll!_PyEval_EvalCodeWithName(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure, _object * name, _object * qualname) Line 4029	C
 	python36_d.dll!fast_function(_object * func, _object * * * pp_stack, int n, int na, int nk) Line 4824	C
 	python36_d.dll!call_function(_object * * * pp_stack, int oparg) Line 4741	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3194	C
 	python36_d.dll!fast_function(_object * func, _object * * * pp_stack, int n, int na, int nk) Line 4815	C
 	python36_d.dll!call_function(_object * * * pp_stack, int oparg) Line 4741	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3194	C
 	python36_d.dll!fast_function(_object * func, _object * * * pp_stack, int n, int na, int nk) Line 4815	C
 	python36_d.dll!call_function(_object * * * pp_stack, int oparg) Line 4741	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3194	C
 	python36_d.dll!fast_function(_object * func, _object * * * pp_stack, int n, int na, int nk) Line 4815	C
 	python36_d.dll!call_function(_object * * * pp_stack, int oparg) Line 4741	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 3194	C
 	python36_d.dll!_PyEval_EvalCodeWithName(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure, _object * name, _object * qualname) Line 4029	C
 	python36_d.dll!PyEval_EvalCodeEx(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure) Line 4050	C
 	python36_d.dll!function_call(_object * func, _object * arg, _object * kw) Line 604	C
 	python36_d.dll!PyObject_Call(_object * func, _object * arg, _object * kw) Line 2170	C
 	python36_d.dll!_PyObject_CallMethodIdObjArgs(_object * callable, _Py_Identifier * name, ...) Line 2428	C
 	python36_d.dll!PyImport_ImportModuleLevelObject(_object * name, _object * given_globals, _object * locals, _object * given_fromlist, int level) Line 1633	C
 	python36_d.dll!builtin___import__(_object * self, _object * args, _object * kwds) Line 213	C
 	python36_d.dll!PyCFunction_Call(_object * func, _object * args, _object * kwds) Line 98	C
 	python36_d.dll!PyObject_Call(_object * func, _object * arg, _object * kw) Line 2170	C
 	python36_d.dll!PyEval_CallObjectWithKeywords(_object * func, _object * arg, _object * kw) Line 4592	C
 	python36_d.dll!PyEval_EvalFrameEx(_frame * f, int throwflag) Line 2759	C
 	python36_d.dll!_PyEval_EvalCodeWithName(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure, _object * name, _object * qualname) Line 4029	C
 	python36_d.dll!PyEval_EvalCodeEx(_object * _co, _object * globals, _object * locals, _object * * args, int argcount, _object * * kws, int kwcount, _object * * defs, int defcount, _object * kwdefs, _object * closure) Line 4050	C
 	python36_d.dll!PyEval_EvalCode(_object * co, _object * globals, _object * locals) Line 777	C
 	python36_d.dll!run_mod(_mod * mod, _object * filename, _object * globals, _object * locals, PyCompilerFlags * flags, _arena * arena) Line 970	C
 	python36_d.dll!PyRun_InteractiveOneObject(_iobuf * fp, _object * filename, PyCompilerFlags * flags) Line 233	C
 	python36_d.dll!PyRun_InteractiveLoopFlags(_iobuf * fp, const char * filename_str, PyCompilerFlags * flags) Line 112	C
 	python36_d.dll!PyRun_AnyFileExFlags(_iobuf * fp, const char * filename, int closeit, PyCompilerFlags * flags) Line 74	C
 	python36_d.dll!run_file(_iobuf * fp, const wchar_t * filename, PyCompilerFlags * p_cf) Line 318	C
 	python36_d.dll!Py_Main(int argc, wchar_t * * argv) Line 768	C
 	python_d.exe!wmain(int argc, wchar_t * * argv) Line 14	C
 	[External Code]	

This was compiled using Microsoft Visual Studio Community 2015
msg259025 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2016-01-27 15:50
Hum, it looks like resize_compact() clears wstr, but don't reset wstr_length to 0. Attached patch should fix that.
msg259026 - (view) Author: Anilyka Barry (abarry) * (Python triager) Date: 2016-01-27 15:56
This fixed it, thanks!
msg259027 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-01-27 16:01
New changeset 8de6f19afc86 by Victor Stinner in branch '3.5':
Fix resize_compact()
https://hg.python.org/cpython/rev/8de6f19afc86
History
Date User Action Args
2022-04-11 14:58:26adminsetgithub: 70405
2016-01-27 16:11:42abarrysetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2016-01-27 16:01:38python-devsetnosy: + python-dev
messages: + msg259027
2016-01-27 15:56:27abarrysetmessages: + msg259026
stage: patch review
2016-01-27 15:50:24vstinnersetfiles: + wstr_len.patch

nosy: + vstinner
messages: + msg259025

keywords: + patch
2016-01-27 15:46:05abarrycreate